# studxml

./: CMakeLists.txt  main.cpp
cmake_extra/: libstudxml.cmake
